--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Golf Club
+  city: West Pam Beach, Florida
+  date: 2017-12-23
+  link: https://twitter.com/kylegriffin1/status/944657641955045376
 - location: Mar-a-Lago
   city: Palm Beach, Florida
   date: 2017-12-22
