--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,5 +1,21 @@
 poops:
 - location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-12-27
+  link: https://twitter.com/W7VOA/status/946021229252591616
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-12-26
+  link: https://twitter.com/Jordanfabian/status/945658977311961089
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-12-25
+  link: http://www.nydailynews.com/amp/news/politics/trump-christmas-dinner-serves-extravagant-gut-busting-desserts-article-1.3720587?__twitter_impression=true
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-12-24
+  link: https://twitter.com/NBCNews/status/944959238278873088
+- location: Trump International Golf Club
   city: West Pam Beach, Florida
   date: 2017-12-23
   link: https://twitter.com/kylegriffin1/status/944657641955045376
