more holiday poopin

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,14 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2017-12-29
+  link: https://amp.usatoday.com/amp/989819001?__twitter_impression=true
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-12-28
+  link: http://publicpool.kinja.com/subject-pool-report-2-trump-international-golf-club-1821621136
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2017-12-27
   link: https://twitter.com/W7VOA/status/946021229252591616
 - location: Trump International Golf Club
