--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2017-12-30
+  link: http://thehill.com/homenews/administration/366868-trump-travels-to-golf-club-for-fifth-straight-day#.WkffNCSsnDU.twitter
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2017-12-29
   link: https://amp.usatoday.com/amp/989819001?__twitter_impression=true
 - location: Trump International Golf Club
