--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2018-01-01
+  link: http://publicpool.kinja.com/subject-pool-report-no-2-1821689434
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2017-12-31
   link: https://twitter.com/CillizzaCNN/status/947483813231382528
 - location: Trump International Golf Club
