--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-01-12
+  link: https://twitter.com/markknoller/status/951971828624429057
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-01-01
