more shithole movement

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-01-13
+  link: https://twitter.com/kylegriffin1/status/952188535838298113
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2018-01-12
