--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2018-01-14
+  link: http://www.palmbeachpost.com/news/local/trump-palm-beach-sunday-starts-second-full-day-mar-lago/l7f6I2YNWbXOIULGbElplO/
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2018-01-13
   link: https://twitter.com/kylegriffin1/status/952188535838298113
 - location: Mar a Lago
