--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -2,6 +2,10 @@ poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-01-14
+  link: http://www.palmbeachpost.com/news/local/trump-palm-beach-protesters-gather-martin-luther-king-day/j3O9dQ9Yuy5EllR4lHA8xJ/
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-01-14
   link: http://www.palmbeachpost.com/news/local/trump-palm-beach-sunday-starts-second-full-day-mar-lago/l7f6I2YNWbXOIULGbElplO/
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
