its been a long poop coming

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2018-02-01
+  link: https://publicpool.kinja.com/subject-in-town-pool-report-5-arrival-at-trump-intern-1822648016
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-01-15
