more florida poopin

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,16 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-02-04
+  link: https://www.instagram.com/p/BeyaNp4Bd5H/?taken-by=drsamarajohnsen
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-02-03
+  link: http://postonpolitics.blog.palmbeachpost.com/2018/02/03/trump-in-palm-beach-en-route-to-golf-course-president-claims-vindication/
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-02-02
+  link: http://www.palmbeachpost.com/news/local/photos-donald-trump-mar-lago-visit-february-2018/csAQpjvYdp1GFXVnApaFLP/
 - location: Trump International Hotel
   city: Washington DC
   date: 2018-02-01
