--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2018-02-10
+  link: https://twitter.com/anitakumar01/status/962505002748141569
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-02-04
