--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,8 +1,24 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-02-19
+  link: https://twitter.com/gbennettpost/status/965589501300105216?ref_src=twsrc%5Etfw&ref_url=http%3A%2F%2Fwww.palmbeachpost.com%2Fnews%2Ftrump-palm-beach-president-head-back-white-house-late-afternoon%2FU0Ac6G0L0znmOC87p4Mn4K%2F
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-02-18
+  link: https://publicpool.kinja.com/subject-travel-print-pool-report-3-trump-internatio-1823121565
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-02-17
+  link: https://twitter.com/JenniferJJacobs/status/964868479437430784
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-02-16
+  link: https://twitter.com/kylegriffin1/status/964689660386709505
 - location: Trump International Hotel
   city: Washington DC
   date: 2018-02-10
-  link: https://twitter.com/anitakumar01/status/962505002748141569
+  link: https://www.instagram.com/p/BfCjfYSAEag/
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-02-04
