back on his bullshit

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-03-02
+  link: https://twitter.com/markknoller/status/969666579922382848
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-02-19
