--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-03-03
+  link: http://www.palmbeachpost.com/news/trump-palm-beach-face-time-with-republican-donors-mar-lago/uFEBIkfQciqUkgMttWioWI/
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2018-03-02
