--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,22 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2018-03-25
+  link: https://twitter.com/gbennettpost/status/977892545027035137?ref_src=twsrc%5Etfw
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-03-24
+  link: https://www.palmbeachpost.com/news/trump-palm-beach-tweet-before-landing-rips-spending-bill/w9pL9doxiJqOTRgtgk1MWK/
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-03-23
+  link: https://twitter.com/markknoller/status/977324490106515456
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-03-18
+  link: https://twitter.com/W7VOA/status/975445291674558466
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2018-03-03
   link: http://www.palmbeachpost.com/news/trump-palm-beach-face-time-with-republican-donors-mar-lago/uFEBIkfQciqUkgMttWioWI/
 - location: Mar a Lago
