--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-29-03
+  link: https://www.palmbeachdailynews.com/news/trump-arrives-palm-beach-for-long-easter-weekend/TkW7vZPpwlsVVSOCgXrxMP/
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-03-25
