hard at work on a Friday

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,7 +1,11 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-03-28
+  link: https://twitter.com/kylegriffin1/status/979718641020231681
 - location: Mar a Lago
   city: Palm Beach, Florida
-  date: 2018-29-03
+  date: 2018-03-29
   link: https://www.palmbeachdailynews.com/news/trump-arrives-palm-beach-for-long-easter-weekend/TkW7vZPpwlsVVSOCgXrxMP/
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
