saturday golf poop

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2018-03-31
+  link: https://publicpool.kinja.com/subject-out-of-town-pool-report-2-march-31-1824228790
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2018-03-30
   link: https://twitter.com/kylegriffin1/status/979718641020231681
 - location: Mar a Lago
