easter sunday poopin

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-04-01
+  link: https://twitter.com/PAStewartFL/status/980508170983542784
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-03-31
