--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2018-04-07
+  link: https://www.instagram.com/p/BhSzbFCFVC8/?taken-by=jessicamcc44
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2018-04-01
