trump national tirade

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-04-15
+  link: https://twitter.com/W7VOA/status/985548423377145857
 - location: Trump International Hotel
   city: Washington DC
   date: 2018-04-07
