mar a lago arrival

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-04-16
+  link: https://www.palmbeachpost.com/news/trump-palm-beach-mid-afternoon-arrival-likely-begin-controversial-visit-mar-lago/N3W2Yklh9k0epZ7Z5NFnEK/
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2018-04-15
