Abe visit poops

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,12 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-04-18
+  link: https://twitter.com/JenniferJJacobs/status/986586129511145472
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-04-17
+  link: https://www.whitehouse.gov/briefings-statements/remarks-president-trump-prime-minister-abe-japan-bilateral-meeting-mar-lago-fl/
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2018-04-16
