mar a lago again

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-04-19
+  link: https://www.mypalmbeachpost.com/news/national-govt--politics/trump-palm-beach-takes-incredible-education-trip-key-west/Q62fXcolZX0FqiCf5UYT6H/
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-04-18
