knocking off early on a Friday

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-04-20
+  link: https://twitter.com/mkraju/status/987323796221775873
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2018-04-19
