--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2018-04-21
+  link: https://twitter.com/tom__brenner/status/987678280168955904
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2018-04-20
   link: https://twitter.com/mkraju/status/987323796221775873
 - location: Mar a Lago
