--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2018-04-22
+  link: https://www.mypalmbeachpost.com/news/national-govt--politics/trump-closes-latest-palm-beach-visit-posing-with-police-tarmac/ynMTvDDlAj4RVFGaxBHzoI/
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-04-21
