--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-05-06
+  link: https://nypost.com/2018/05/06/trump-and-giuliani-golf-together-days-after-they-couldnt-agree-on-facts/
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2018-04-22
