--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
+  date: 2018-05-12
+  link: https://twitter.com/kylegriffin1/status/995306358424702976?s=19
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
   date: 2018-05-06
   link: https://nypost.com/2018/05/06/trump-and-giuliani-golf-together-days-after-they-couldnt-agree-on-facts/
 - location: Mar a Lago
