another day another trip to trump national

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
+  date: 2018-05-13
+  link: https://publicpool.kinja.com/subject-pool-report-3-1825992426
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
   date: 2018-05-12
   link: https://twitter.com/kylegriffin1/status/995306358424702976?s=19
 - location: Trump National Golf Club
