memorial weekend poopin

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,14 @@
 poops:
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
+  date: 2018-05-27
+  link: https://publicpool.kinja.com/subject-in-town-pool-report-2-golf-1826355812
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-05-26
+  link: https://publicpool.kinja.com/subject-pool-report-no-4-1826346938
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
   date: 2018-05-13
   link: https://publicpool.kinja.com/subject-pool-report-3-1825992426
 - location: Trump National Golf Club
