fathers day poop added belatedly

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
+  date: 2018-06-17
+  link: https://publicpool.kinja.com/subject-in-town-print-pool-3-departing-golf-club-1826902568
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
   date: 2018-05-27
   link: https://publicpool.kinja.com/subject-in-town-pool-report-2-golf-1826355812
 - location: Trump National Golf Club
