--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump Turnberry
+  city: South Ayreshire, Scotland
+  date: 2018-07-14
+  link: https://twitter.com/realDonaldTrump/status/1018068353305411584
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2018-07-08
