other scotland poop

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump Turnberry
   city: South Ayreshire, Scotland
+  date: 2018-07-15
+  link: https://twitter.com/realDonaldTrump/status/1018068353305411584
+- location: Trump Turnberry
+  city: South Ayreshire, Scotland
   date: 2018-07-14
   link: https://twitter.com/realDonaldTrump/status/1018068353305411584
 - location: Trump National Golf Club
