--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,16 @@
 poops:
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-07-22
+  link: https://twitter.com/markknoller/status/1021356969016389633
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-07-21
+  link: https://www.nj.com/politics/index.ssf/2018/07/trump_arrives_in_nj_for_weekend_stay.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-07-20
+  link: https://www.nj.com/politics/index.ssf/2018/07/trump_arrives_in_nj_for_weekend_stay.html
 - location: Trump Turnberry
   city: South Ayreshire, Scotland
   date: 2018-07-15
