another weekend in jersey

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,14 @@
 poops:
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
+  date: 2018-07-28
+  link: https://www.nj.com/politics/index.ssf/2018/07/another_weekend_another_trump_sighting_in_jersey.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-07-27
+  link: https://www.nj.com/politics/index.ssf/2018/07/another_weekend_another_trump_sighting_in_jersey.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
   date: 2018-07-22
   link: https://twitter.com/markknoller/status/1021356969016389633
 - location: Trump National Golf Club
