--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,5 +1,77 @@
 poops:
 - location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-08-26
+  link: https://www.nytimes.com/2018/08/26/us/politics/trump-mccain-funeral.html
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-08-25
+  link: https://twitter.com/kylegriffin1/status/1033373520036806656
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-19
+  link: https://www.nj.com/politics/index.ssf/2018/08/welcome_back_mr_president_trump_returns_to_jersey.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-18
+  link: https://www.nj.com/politics/index.ssf/2018/08/welcome_back_mr_president_trump_returns_to_jersey.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-17
+  link: https://www.nj.com/politics/index.ssf/2018/08/welcome_back_mr_president_trump_returns_to_jersey.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-13
+  link: https://publicpool.kinja.com/subject-pool-report-1-1828304349
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-12
+  link: https://www.dailyherald.com/news/20180810/trumps-summer-dont-call-it-a-vacation
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-11
+  link: https://www.cbsnews.com/news/bikers-for-trump-bedminister-new-jersey-trump-omarosa-manigault-newman-comments-today-2018-08-11/
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-10
+  link: https://www.dailyherald.com/news/20180810/trumps-summer-dont-call-it-a-vacation
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-09
+  link: https://publicpool.kinja.com/subject-remarks-by-president-trump-at-prison-reform-ro-1828239011
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-08
+  link: https://www.nj.com/politics/index.ssf/2018/08/president_trump_returns_to_jersey_for_a_while.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-07
+  link: https://publicpool.kinja.com/subject-pool-report-6-dinner-with-business-leaders-1828178681
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-06
+  link: http://jamiedupree.blog.ajc.com/2018/08/06/as-trump-takes-summer-break-russia-probe-does-not/
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-05
+  link: http://thehill.com/homenews/administration/400489-trump-golfs-with-graham-at-new-jersey-club
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-04
+  link: https://patch.com/new-jersey/morristown/trump-flying-out-back-morristown-saturday
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-03
+  link: https://www.nj.com/politics/index.ssf/2018/08/president_trump_returns_to_jersey_for_a_while.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-08-02
+  link: https://www.nj.com/politics/index.ssf/2018/08/president_trump_returns_to_jersey_for_a_while.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2018-07-29
+  link: https://publicpool.kinja.com/subject-wh-travel-pool-3-1827958832
+- location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2018-07-28
   link: https://www.nj.com/politics/index.ssf/2018/07/another_weekend_another_trump_sighting_in_jersey.html
