--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,5 +1,9 @@
 poops:
 - location: Trump International Hotel
+  city: Las Vegas, Nevada
+  date: 2018-09-20
+  link: https://publicpool.kinja.com/subject-travel-pool-report-6-1829214762
+- location: Trump International Hotel
   city: Washington DC
   date: 2018-09-12
   link: https://twitter.com/jdawsey1/status/1039936884095574016?s=19
