missed a poop on Sept 17

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -5,6 +5,10 @@ poops:
   link: https://publicpool.kinja.com/subject-travel-pool-report-6-1829214762
 - location: Trump International Hotel
   city: Washington DC
+  date: 2018-09-17
+  link: https://twitter.com/kylegriffin1/status/1041827970460123137
+- location: Trump International Hotel
+  city: Washington DC
   date: 2018-09-12
   link: https://twitter.com/jdawsey1/status/1039936884095574016?s=19
 - location: Trump National Golf Club
