new jersey poopin

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2018-09-22
+  link: https://publicpool.kinja.com/subject-travel-pool-report-18-1829240868
 - location: Trump International Hotel
   city: Las Vegas, Nevada
   date: 2018-09-20
