--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,6 @@
 poops:
 - location: Trump National Golf Club
-  city: Potomac Falls, Virginia
+  city: Bedminster, New Jersey
   date: 2018-09-22
   link: https://publicpool.kinja.com/subject-travel-pool-report-18-1829240868
 - location: Trump International Hotel
