jesus a lot of pooping this week

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,5 +1,29 @@
 poops:
 - location: Trump National Golf Club
+  city: Potomac Falls, VA
+  date: 2018-09-29
+  link: https://twitter.com/kylegriffin1/status/1046057065448452105
+- location: Trump Tower
+  city: New York City
+  date: 2018-09-27
+  link: https://publicpool.kinja.com/subject-wh-print-pool-1-1829357646#_ga=2.67809812.40318144.1538264274-1592473203.1522946386
+- location: Trump Tower
+  city: New York City
+  date: 2018-09-26
+  link: https://publicpool.kinja.com/subject-travel-pool-report-1-1829326056#_ga=2.264500618.40318144.1538264274-1592473203.1522946386
+- location: Trump Tower
+  city: New York City
+  date: 2018-09-25
+  link: https://publicpool.kinja.com/subject-wh-pool-report-2-1829296560#_ga=2.88199710.40318144.1538264274-1592473203.1522946386
+- location: Trump Tower
+  city: New York City
+  date: 2018-09-24
+  link: https://publicpool.kinja.com/subject-wh-travel-pool-report-1-1829265063#_ga=2.97235226.40318144.1538264274-1592473203.1522946386
+- location: Trump Tower
+  city: New York City
+  date: 2018-09-23
+  link: https://publicpool.kinja.com/subject-travel-pool-report-9-1829258244#_ga=2.97235226.40318144.1538264274-1592473203.1522946386
+- location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2018-09-23
   link: https://www.nj.com/politics/index.ssf/2018/09/guess_whos_returning_to_jersey_next_week_hint_hes.html
