--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump National Golf Club
   city: Potomac Falls, VA
+  date: 2018-10-14
+  link: https://twitter.com/kylegriffin1/status/1051481689480933378
+- location: Trump National Golf Club
+  city: Potomac Falls, VA
   date: 2018-09-29
   link: https://twitter.com/kylegriffin1/status/1046057065448452105
 - location: Trump Tower
