--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2018-10-25
+  link: https://twitter.com/kylegriffin1/status/1055606381821222913
 - location: Trump National Golf Club
   city: Potomac Falls, VA
   date: 2018-10-14
