--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2018-11-20
+  link: https://apnews.com/a1a4aa63a4c648f8a28659c9049218e8
 - location: Trump International Hotel
   city: Washington DC
   date: 2018-10-25
