--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,20 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-11-24
+  link: https://www.palmbeachpost.com/news/20181124/trump-in-palm-beach-more-golf-on-small-business-saturday
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-11-23
+  link: https://www.washingtonpost.com/national/trump-says-time-for-action-on-the-wall-visits-golf-course/2018/11/23/22105c92-ef2d-11e8-8b47-bd0975fd6199_story.html?utm_term=.3c1c1d235207
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-11-22
+  link: https://www.palmbeachpost.com/news/20181122/trump-celebrates-thanksgiving-dinner-after-busy-day
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2018-11-21
+  link: https://golfweek.com/2018/11/22/president-trump-joins-jack-nicklaus-for-round-of-pre-thanksgiving-golf/
 - location: Mar-a-Lago
   city: Palm Beach, Florida
   date: 2018-11-20
