final palm beach poop

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2018-11-25
+  link: https://www.palmbeachpost.com/news/20181125/trump-concludes-eventful-thanksgiving-stay-in-palm-beach
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2018-11-24
   link: https://www.palmbeachpost.com/news/20181124/trump-in-palm-beach-more-golf-on-small-business-saturday
 - location: Trump International Golf Club
