finally he pooped again

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Hotel
+  city: washington DC
+  date: 2019-01-28
+  link: https://twitter.com/markknoller/status/1090031508470022144
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2018-11-25
