final florida poop

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-02-03
+  link: https://twitter.com/kylegriffin1/status/1092057647442989056
 - location: Trump National Golf Club
   city: Jupiter, Florida
   date: 2019-02-02
