back on his shit

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,8 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2019-02-15
+  link: https://twitter.com/markknoller/status/1096555230332940288
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2019-02-03
